--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CommanderConnection":"Server=DESKTOP-TVR60NK;Initial Catalog=CommanderDB;User ID=CommanderAPI; Password=123;"
+    "CommanderConnection":"Server=SERVER_NAME;Initial Catalog=CommanderDB;User ID=CommanderAPI; Password=____;"
   }
 }
